refactor: Piece 구조 변경