@@ -12,36 +12,26 @@ import chess.domain.movingStrategy.MovingStrategy;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 public final class Pawn extends NonSlidingPiece {
 
     private static final int INITIAL_WHITE_RANK = 2;
     private static final int INITIAL_BLACK_RANK = 7;
 
-    private final AttackStrategies attackStrategies;
-
-    private Pawn(final Color color, final MovingStrategies movingStrategies, final AttackStrategies attackStrategies) {
+    private Pawn(final Color color, final MovingStrategies movingStrategies) {
         super(color, PieceType.PAWN, movingStrategies);
-        this.attackStrategies = attackStrategies;
     }
 
     private static Pawn createWhitePawn() {
-        final List<MovingStrategy> movingStrategies = List.of(new MoveUp());
-        final List<MovingStrategy> attackStrategies = List.of(new MoveLeftUp(), new MoveRightUp());
-
-        return new Pawn(Color.WHITE,
-                new MovingStrategies(movingStrategies),
-                new AttackStrategies(Color.WHITE, attackStrategies));
+        final List<MovingStrategy> movingStrategies = List.of(
+                new MoveUp(), new MoveLeftUp(), new MoveRightUp());
+        return new Pawn(Color.WHITE, new MovingStrategies(movingStrategies));
     }
 
     private static Pawn createBlackPawn() {
-        final List<MovingStrategy> movingStrategies = List.of(new MoveDown());
-        final List<MovingStrategy> attackStrategies = List.of(new MoveLeftDown(), new MoveRightDown());
-
-        return new Pawn(Color.BLACK,
-                new MovingStrategies(movingStrategies),
-                new AttackStrategies(Color.BLACK, attackStrategies));
+        final List<MovingStrategy> movingStrategies = List.of(
+                new MoveDown(), new MoveLeftDown(), new MoveRightDown());
+        return new Pawn(Color.BLACK, new MovingStrategies(movingStrategies));
     }
 
     public static Pawn createByColor(final Color color) {
@@ -56,65 +46,28 @@ public final class Pawn extends NonSlidingPiece {
 
     @Override
     public List<Position> findPath(final Position source, final Position target, final Color targetColor) {
-        final Optional<MovingStrategy> strategy = attackStrategies.findStrategy(source, target);
-        if (strategy.isPresent()) {
-            if (attackStrategies.canAttack(source, target, targetColor, strategy.get())) {
+        final MovingStrategy movingStrategy = movingStrategies.findStrategy(source, target);
+        if (movingStrategy.isAttackStrategy()) {
+            final Position movePosition = movingStrategy.move(source);
+            if (movePosition.equals(target) && color.isOpponent(targetColor)) {
                 return Collections.emptyList();
             }
             throw new IllegalArgumentException("폰이 해당 지점으로 이동할 수 없습니다.");
         }
-        final MovingStrategy movingStrategy = movingStrategies.findStrategy(source, target);
-        if (isOneStepMove(source, target, targetColor)) {
-            return Collections.emptyList();
-        }
-        if (isTwoStepMove(source, target, targetColor)) {
-            return getTwoStepPath(source, movingStrategy);
+        if (targetColor.isEmpty()) {
+            Position firstMove = movingStrategy.move(source);
+            if (firstMove.equals(target)) {
+                return Collections.emptyList();
+            }
+            Position secondMove = movingStrategy.move(firstMove);
+            if (secondMove.equals(target) && isInitialPosition(source)) {
+                return List.of(firstMove);
+            }
         }
         throw new IllegalArgumentException("폰이 해당 지점으로 이동할 수 없습니다.");
     }
 
-    private boolean isOneStepMove(final Position source, final Position target, final Color targetColor) {
-        return source.isUpDown(target) && targetColor.isEmpty();
-    }
-
-    private boolean isTwoStepMove(final Position source, final Position target, final Color targetColor) {
-        return isMovableTwoStep(source) && source.isUpDownTwo(target) && targetColor.isEmpty();
-    }
-
-    private List<Position> getTwoStepPath(final Position source, final MovingStrategy movingStrategy) {
-        return List.of(movingStrategy.move(source));
-    }
-
-    private boolean isMovableTwoStep(final Position source) {
-        if (color.isWhite()) {
-            return source.getRankOrder() == INITIAL_WHITE_RANK;
-        }
-        if (color.isBlack()) {
-            return source.getRankOrder() == INITIAL_BLACK_RANK;
-        }
-        return false;
-    }
-
-    private static class AttackStrategies {
-
-        private final Color color;
-        private final List<MovingStrategy> attackStrategies;
-
-        private AttackStrategies(final Color color, final List<MovingStrategy> attackStrategies) {
-            this.color = color;
-            this.attackStrategies = attackStrategies;
-        }
-
-        private Optional<MovingStrategy> findStrategy(final Position source, final Position target) {
-            return attackStrategies.stream()
-                    .filter(strategy -> strategy.movable(source, target))
-                    .findFirst();
-        }
-
-        private boolean canAttack(final Position source, final Position target, final Color targetColor,
-                                  final MovingStrategy attackStrategy) {
-            final Position movePosition = attackStrategy.move(source);
-            return movePosition.equals(target) && color.isOpponent(targetColor);
-        }
+    private boolean isInitialPosition(final Position source) {
+        return source.getRankOrder() == INITIAL_WHITE_RANK || source.getRankOrder() == INITIAL_BLACK_RANK;
     }
 }
